--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <body>
     <span class="toTheTop" id="top"></span>
     <div class="header">
-      <img src="./public/images/svg/logo.webp" alt="Logo pizzeri casa salvati" />
+      <img src="./public/images/svg/logo.webp" alt="Logo pizzeria casa salvati" />
       <h1 class="title">Il menù</h1>
       <div class="line"></div>
     </div>
