aggiunto avviso aggiornamento listino

--- a/index.html
+++ b/index.html
@@ -157,7 +157,9 @@
       <h1 class="title">Il menù</h1>
       <div class="line"></div>
     </div>
-    <div class="main__container" id="main__container"></div>
+    <div class="main__container" id="main__container">
+      <div class="info__container">🚨Listino Prezzi in Aggiornamento🚨<p class="info">Per informazioni rivolgersi al personale</p></div>
+    </div>
     <div class="footer__container">
       <div class="upper__footer">
         <h1>Pizzeria Casa Salvati</h1>
