modificato stile invernale

--- a/index.html
+++ b/index.html
@@ -205,6 +205,6 @@
     </div>
     <!-- <script src="/public/script/jquery.js"></script> -->
     <script src="/public/script/index.js?version=newFinal"></script>
-    <!--<script src="/public/script/snow.js" id="snow"></script>-->
+    <script src="/public/script/snow.js" id="snow"></script>
   </body>
 </html>
